@@ -1,3 +1,9 @@
+2012-05-27 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCClospre.hpp,
+	  src/SDCClospre.cc:
+	  Fix handling of --max-allocs-per-node in lospre.
+
 2012-05-26 Borut Razem <borut.razem AT gmail.com>
 
 	* src/pic16/main.c: allow space characters in #pragma config
